# afga_adaptive_finance_governance_agent

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  DOCUMENT_EXTRACTION_FEATURE.md  Dockerfile  FEATURE_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MVP_STATUS.md  PROGRESS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_SCRIPTS.md  demo_restart.sh  docker-compose.yml  env.example  force_restart.sh  governance_audit.jsonl  pyproject.toml  requirements.txt  restart.sh  restart_fresh.sh  start.sh  stop.sh
.streamlit/: config.toml
azure_extension/: CLOUD_MODE_SUCCESS.md  DATABRICKS_READINESS_CHECKLIST.md  DATABRICKS_TESTING_GUIDE.md  DEMO_NARRATIVE_SCRIPT.md  DEMO_SCENARIOS.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_SECRETS_CHECKLIST.md  GITHUB_ACTIONS_SETUP.md  LOCAL_KUBERNETES_COMPARISON.md  LOCAL_KUBERNETES_TESTING.md  METADATA_GUIDE.md  MINIKUBE_TESTING_QUICKSTART.md  NEXT_STEPS_SUMMARY.md  PROGRESS.md  QUICKSTART.md  README.md  RESOURCE_MANAGEMENT.md  SESSION_SUMMARY.md  WHATS_NEW.md  verify-readiness.sh
azure_extension/databricks/: README.md  SETUP.md
azure_extension/docs/: ARCHITECTURE.md  (+2 more)
data/: databricks_upload_registry.json  memory.db
deployment/: README.md
docs/: A2A_VS_MCP.md  ARCHITECTURE.md  CLASSIFICATIONS_GUIDE.md  DEPLOYMENT_OPTIONS.md  DOCUMENT_EXTRACTION.md  GOVERNANCE.md  HYBRID_A2A_MCP.md  README.md  SETUP_VISION.md
scripts/: backfill_databricks_uploads.py  batch_process_invoices.py  debug_database.py  generate_mock_data.py  generate_mock_invoices.py  insert_hitl_transaction.py  migrate_database.py  reset_database.py  setup_automation.sh  test_audit_filter.py
src/: __init__.py
streamlit_app/: app.py
tests/: __init__.py  test_databricks_api_integration.py  test_databricks_integration.py  test_databricks_similarity_search.py
(+207 files in other folders)
